# schlep

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.yml
k8s/: client.yaml  prom.values.yaml  route.yaml  server.yaml  serviceprofile.yaml
k8s/nginx/: README.md  client.yaml  ingress.yaml  nginx.conf  nginx.yaml  ns.yaml  server.yaml
proto/: Cargo.toml  schlep.proto
proto/src/: lib.rs
proto/tests/: bootstrap.rs
src/: client.rs  main.rs  server.rs  summary.rs
