[workspace]
members = [".", "proto"]

[workspace.dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
hdrhistogram = "7"
h2 = "0.4"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = [
    "http2",
    "client",
    "server",
] }
hyper-util = { version = "0.1", features = ["tokio"] }
kubert = { version = "0.21", default-features = false, features = [
    "clap",
    "log",
    "shutdown",
] }
futures = { version = "0.3", default-features = false }
prost = "0.13"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.10"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tonic-build = "0.12"
tower = "0.4"
tracing = "0.1"

[package]
name = "schlep"
version = "0.5.1"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
h2 = { workspace = true }
hdrhistogram = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
kubert = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

schlep-proto = { path = "proto" }
